절대 경로 설정 및 인터페이스 분리

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,25 +1,28 @@
+// tsconfig.node.json
 {
   "compilerOptions": {
+    "composite": true, // 참조를 위해 필수
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2023",
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
-
-    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
     "noEmit": true,
-
-    /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    // Node.js 타입 설정
+    "types": [
+      "node"
+    ]
   },
   "include": ["vite.config.ts"]
 }
