앱 버전 디자인 전체 수정

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,7 +29,10 @@
       "@/lib/*": ["lib/*"],
       "@/types/*": ["types/*"],
       "@/pages/*": ["pages/*"],
-      "@/data/*": ["data/*"] 
+      "@/data/*": ["data/*"] ,      
+      "@/constants/*": ["constants/*"], 
+      "@/assets/*": ["assets/*"], 
+
     }
   },
   "include": ["src"]
