--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "^3.0.2",
+    "@headlessui/react": "^2.2.8",
     "@tailwindcss/vite": "^4.1.13",
     "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
